@@ -1,4 +1,5 @@
 [master]
+    - Fixes #1131: MacOSX: JabRef minimizes when clicking on x
     - Dropped jayatana version 1.2.4 as version 2.x superseeds it
     - Feature: Trim journal names before looking up the abbreviation
     - Minor fixes regarding the status output of marking/unmarking entries
